Semester_212/CO3005/Assignment 2/src/main/d96/parser/.antlr/D96Parser.py
# Generated from /home/thanh792001/Computer-Science---HCMUT/Semester_212/CO3005/Assignment 2/src/main/d96/parser/D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Null'", "'Class'", "'Val'", 
                     "'Var'", "'Self'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'==.'", "'+.'", "'::'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'..'", "'.'", "','", 
                     "';'", "':'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_CMT", "INT_LIT", "FLOAT_LIT", 
                      "BOOL_LIT", "STR_LIT", "DIGIT", "BREAK", "CONTINUE", 
                      "IF", "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", 
                      "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", "STRING", 
                      "RETURN", "NULL", "CLASS", "VAL", "VAR", "SELF", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "ADD", "SUB", "MUL", "DIV", 
                      "PRCNT", "NOT", "AND", "OR", "EQ", "ASSIGN", "NOT_EQ", 
                      "LESS", "LESS_EQ", "GREAT", "GREAT_EQ", "EQ_STR", 
                      "CONCAT_STR", "STATIC_ACC", "LB", "RB", "LP", "RP", 
                      "LSB", "RSB", "DOTDOT", "DOT", "CM", "SEMI", "CL", 
                      "DOUBLEQUOTE", "ID", "STATIC_ID", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_start = 0
    RULE_program = 1
    RULE_class_decl = 2
    RULE_mem_list = 3
    RULE_attri_decl = 4
    RULE_attri_recurse = 5
    RULE_id_list = 6
    RULE_method_decl = 7
    RULE_param_list = 8
    RULE_expr = 9
    RULE_expr_list = 10
    RULE_func_call = 11
    RULE_stmt = 12
    RULE_varval_const_stmt = 13
    RULE_const_recurse = 14
    RULE_assign_stmt = 15
    RULE_lhs = 16
    RULE_if_stmt = 17
    RULE_for_in_stmt = 18
    RULE_break_stmt = 19
    RULE_cont_stmt = 20
    RULE_rtrn_stmt = 21
    RULE_method_invoc_stmt = 22
    RULE_block_stmt = 23
    RULE_literal = 24
    RULE_idx_arr = 25
    RULE_mul_dim_arr = 26
    RULE_data_type = 27
    RULE_primitive_type = 28
    RULE_array_type = 29
    RULE_ident = 30

    ruleNames =  [ "start", "program", "class_decl", "mem_list", "attri_decl", 
                   "attri_recurse", "id_list", "method_decl", "param_list", 
                   "expr", "expr_list", "func_call", "stmt", "varval_const_stmt", 
                   "const_recurse", "assign_stmt", "lhs", "if_stmt", "for_in_stmt", 
                   "break_stmt", "cont_stmt", "rtrn_stmt", "method_invoc_stmt", 
                   "block_stmt", "literal", "idx_arr", "mul_dim_arr", "data_type", 
                   "primitive_type", "array_type", "ident" ]

    EOF = Token.EOF
    BLOCK_CMT=1
    INT_LIT=2
    FLOAT_LIT=3
    BOOL_LIT=4
    STR_LIT=5
    DIGIT=6
    BREAK=7
    CONTINUE=8
    IF=9
    ELSEIF=10
    ELSE=11
    FOREACH=12
    TRUE=13
    FALSE=14
    ARRAY=15
    IN=16
    INT=17
    FLOAT=18
    BOOLEAN=19
    STRING=20
    RETURN=21
    NULL=22
    CLASS=23
    VAL=24
    VAR=25
    SELF=26
    CONSTRUCTOR=27
    DESTRUCTOR=28
    NEW=29
    BY=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    PRCNT=35
    NOT=36
    AND=37
    OR=38
    EQ=39
    ASSIGN=40
    NOT_EQ=41
    LESS=42
    LESS_EQ=43
    GREAT=44
    GREAT_EQ=45
    EQ_STR=46
    CONCAT_STR=47
    STATIC_ACC=48
    LB=49
    RB=50
    LP=51
    RP=52
    LSB=53
    RSB=54
    DOTDOT=55
    DOT=56
    CM=57
    SEMI=58
    CL=59
    DOUBLEQUOTE=60
    ID=61
    STATIC_ID=62
    WS=63
    ERROR_CHAR=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(D96Parser.ProgramContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_start




    def start(self):

        localctx = D96Parser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.program()
            self.state = 63
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 65
                self.class_decl()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 70
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def mem_list(self):
            return self.getTypedRuleContext(D96Parser.Mem_listContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_decl




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(D96Parser.CLASS)
            self.state = 73
            self.match(D96Parser.ID)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.CL:
                self.state = 74
                self.match(D96Parser.CL)
                self.state = 75
                self.match(D96Parser.ID)


            self.state = 78
            self.match(D96Parser.LP)
            self.state = 79
            self.mem_list()
            self.state = 80
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mem_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attri_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Attri_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Attri_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Method_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Method_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_mem_list




    def mem_list(self):

        localctx = D96Parser.Mem_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mem_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.STATIC_ID))) != 0):
                self.state = 84
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL, D96Parser.VAR]:
                    self.state = 82
                    self.attri_decl()
                    pass
                elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.STATIC_ID]:
                    self.state = 83
                    self.method_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attri_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def attri_recurse(self):
            return self.getTypedRuleContext(D96Parser.Attri_recurseContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attri_decl




    def attri_decl(self):

        localctx = D96Parser.Attri_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attri_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 90
                self.id_list()
                self.state = 91
                self.match(D96Parser.CL)
                self.state = 92
                self.data_type()
                pass

            elif la_ == 2:
                self.state = 94
                self.attri_recurse()
                pass


            self.state = 97
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attri_recurseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(D96Parser.IdentContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def attri_recurse(self):
            return self.getTypedRuleContext(D96Parser.Attri_recurseContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attri_recurse




    def attri_recurse(self):

        localctx = D96Parser.Attri_recurseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attri_recurse)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.ident()
                self.state = 100
                self.match(D96Parser.CM)
                self.state = 101
                self.attri_recurse()
                self.state = 102
                self.match(D96Parser.CM)
                self.state = 103
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.ident()
                self.state = 106
                self.match(D96Parser.CL)
                self.state = 107
                self.data_type()
                self.state = 108
                self.match(D96Parser.ASSIGN)
                self.state = 109
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def getRuleIndex(self):
            return D96Parser.RULE_id_list




    def id_list(self):

        localctx = D96Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.ident()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.CM:
                self.state = 114
                self.match(D96Parser.CM)
                self.state = 115
                self.ident()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(D96Parser.IdentContext,0)


        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_method_decl




    def method_decl(self):

        localctx = D96Parser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.STATIC_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.ident()
                self.state = 122
                self.match(D96Parser.LB)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID or _la==D96Parser.STATIC_ID:
                    self.state = 123
                    self.param_list()


                self.state = 126
                self.match(D96Parser.RB)
                self.state = 127
                self.block_stmt()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 130
                self.match(D96Parser.LB)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID or _la==D96Parser.STATIC_ID:
                    self.state = 131
                    self.param_list()


                self.state = 134
                self.match(D96Parser.RB)
                self.state = 135
                self.block_stmt()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.match(D96Parser.DESTRUCTOR)
                self.state = 137
                self.match(D96Parser.LB)
                self.state = 138
                self.match(D96Parser.RB)
                self.state = 139
                self.block_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Id_listContext)
            else:
                return self.getTypedRuleContext(D96Parser.Id_listContext,i)


        def CL(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CL)
            else:
                return self.getToken(D96Parser.CL, i)

        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Data_typeContext)
            else:
                return self.getTypedRuleContext(D96Parser.Data_typeContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_param_list




    def param_list(self):

        localctx = D96Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.id_list()
            self.state = 143
            self.match(D96Parser.CL)
            self.state = 144
            self.data_type()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 145
                self.match(D96Parser.SEMI)
                self.state = 146
                self.id_list()
                self.state = 147
                self.match(D96Parser.CL)
                self.state = 148
                self.data_type()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(D96Parser.LiteralContext,0)


        def idx_arr(self):
            return self.getTypedRuleContext(D96Parser.Idx_arrContext,0)


        def mul_dim_arr(self):
            return self.getTypedRuleContext(D96Parser.Mul_dim_arrContext,0)


        def SELF(self):
            return self.getToken(D96Parser.SELF, 0)

        def NULL(self):
            return self.getToken(D96Parser.NULL, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def func_call(self):
            return self.getTypedRuleContext(D96Parser.Func_callContext,0)


        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExprContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExprContext,i)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def NEW(self):
            return self.getToken(D96Parser.NEW, 0)

        def expr_list(self):
            return self.getTypedRuleContext(D96Parser.Expr_listContext,0)


        def STATIC_ACC(self):
            return self.getToken(D96Parser.STATIC_ACC, 0)

        def STATIC_ID(self):
            return self.getToken(D96Parser.STATIC_ID, 0)

        def SUB(self):
            return self.getToken(D96Parser.SUB, 0)

        def NOT(self):
            return self.getToken(D96Parser.NOT, 0)

        def MUL(self):
            return self.getToken(D96Parser.MUL, 0)

        def DIV(self):
            return self.getToken(D96Parser.DIV, 0)

        def PRCNT(self):
            return self.getToken(D96Parser.PRCNT, 0)

        def ADD(self):
            return self.getToken(D96Parser.ADD, 0)

        def AND(self):
            return self.getToken(D96Parser.AND, 0)

        def OR(self):
            return self.getToken(D96Parser.OR, 0)

        def EQ(self):
            return self.getToken(D96Parser.EQ, 0)

        def NOT_EQ(self):
            return self.getToken(D96Parser.NOT_EQ, 0)

        def LESS(self):
            return self.getToken(D96Parser.LESS, 0)

        def GREAT(self):
            return self.getToken(D96Parser.GREAT, 0)

        def LESS_EQ(self):
            return self.getToken(D96Parser.LESS_EQ, 0)

        def GREAT_EQ(self):
            return self.getToken(D96Parser.GREAT_EQ, 0)

        def EQ_STR(self):
            return self.getToken(D96Parser.EQ_STR, 0)

        def CONCAT_STR(self):
            return self.getToken(D96Parser.CONCAT_STR, 0)

        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.LSB)
            else:
                return self.getToken(D96Parser.LSB, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.RSB)
            else:
                return self.getToken(D96Parser.RSB, i)

        def getRuleIndex(self):
            return D96Parser.RULE_expr



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 156
                self.literal()
                pass

            elif la_ == 2:
                self.state = 157
                self.idx_arr()
                pass

            elif la_ == 3:
                self.state = 158
                self.mul_dim_arr()
                pass

            elif la_ == 4:
                self.state = 159
                self.match(D96Parser.SELF)
                pass

            elif la_ == 5:
                self.state = 160
                self.match(D96Parser.NULL)
                pass

            elif la_ == 6:
                self.state = 161
                self.match(D96Parser.ID)
                pass

            elif la_ == 7:
                self.state = 162
                self.func_call()
                pass

            elif la_ == 8:
                self.state = 163
                self.match(D96Parser.LB)
                self.state = 164
                self.expr(0)
                self.state = 165
                self.match(D96Parser.RB)
                pass

            elif la_ == 9:
                self.state = 167
                self.match(D96Parser.NEW)
                self.state = 168
                self.match(D96Parser.ID)
                self.state = 169
                self.match(D96Parser.LB)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT_LIT) | (1 << D96Parser.FLOAT_LIT) | (1 << D96Parser.BOOL_LIT) | (1 << D96Parser.STR_LIT) | (1 << D96Parser.ARRAY) | (1 << D96Parser.NULL) | (1 << D96Parser.SELF) | (1 << D96Parser.NEW) | (1 << D96Parser.SUB) | (1 << D96Parser.NOT) | (1 << D96Parser.LB) | (1 << D96Parser.ID))) != 0):
                    self.state = 170
                    self.expr_list()


                self.state = 173
                self.match(D96Parser.RB)
                pass
